--- a/src/Revit.SDK.Nuget.csproj
+++ b/src/Revit.SDK.Nuget.csproj
@@ -10,20 +10,21 @@
 
 	<PropertyGroup>
 		<PackageId>RevitApi.Common</PackageId>
-		<Version>$(Version)</Version>
 		<Authors>VampireFu</Authors>
 		<Company></Company>
 		<PackageTags>revit, sdk, api, sdk, autodesk, revitapi, revitsdk, C#, addin, plugin, command, external application, applicaion, $(RevitVersion), revit$(RevitVersion)</PackageTags>
-		<Description>The Software Development Toolkit (SDK) provides extensive .NET code samples and documentation to help you get started developing with the Revit API.
-		
-		AdWindows.dll
-		RevitAddInUtility.dll
-		RevitAPI.dll
-		RevitAPIIFC.dll
-		RevitAPIUI.dll
-		RevitNET.dll
-		UIFramework.dll
-		UIFrameworkServices.dll</Description>
+		<Description>
+			The Software Development Toolkit (SDK) provides extensive .NET code samples and documentation to help you get started developing with the Revit API.
+
+			AdWindows.dll
+			RevitAddInUtility.dll
+			RevitAPI.dll
+			RevitAPIIFC.dll
+			RevitAPIUI.dll
+			RevitNET.dll
+			UIFramework.dll
+			UIFrameworkServices.dll
+		</Description>
 		<Copyright>© Autodesk Inc. All rights reserved</Copyright>
 		<PackageProjectUrl>https://www.autodesk.com/developer-network/platform-technologies/revit</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/vampirefu/revitApi</RepositoryUrl>
@@ -34,6 +35,7 @@
 		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 		<PackageIcon>Revit.png</PackageIcon>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -49,8 +51,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Content Include="../lib/$(RevitVersion)/*" Pack="true" PackagePath="ref/$(TargetPath)" />
+		<Content Include="../lib/$(RevitVersion)/*" Pack="true" PackagePath="lib/$(TargetPath)" />
 		<Content Include="../assets/LICENSE.txt" Pack="true" PackagePath="" />
+		<None Include="..\README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
 	</ItemGroup>
 
 	<ItemGroup>
